# workspace-template

./: Cargo.toml  README.md  package-lock.json  package.json
tests/: package-lock.json  package.json
tests/src/: 1-hello.test.ts  consts.ts
tests/src/utils/: juno.ts  sei.ts
