[workspace]
members = [ "contracts/*", "packages/*" ]

[workspace.package]
version = "0.1.0"
authors = [ "Warp", "You" ]
edition = "2018"

[workspace.dependencies]
cosmwasm-schema = "1.5.8"
cosmwasm-std = { version = "1.5.8", features = ["stargate"] }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.2"
cw721 = "0.18.0"
cw721-base = "0.18.0"
schemars = "0.8.11"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0" }