[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
description = "SEI Smart Contract"
version = "0.1.0"
authors = ["Warp", "Warp"]
edition = "2021"
homepage = "https://example.com/"
documentation = "https://example.com/docs"
license = "MIT"
repository = ""
rust-version = "1.60.0"

[workspace.dependencies]
cosmwasm-schema = { version = "^1.5.3" }
cosmwasm-std = { version = "^1.5.3", features = ["stargate"] }
cosmwasm-storage = "1.4.10"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw-ownable = "0.5.1"
cw721-base-016 = { package = "cw721-base", version = "0.16.0" }
cw721 = "0.18"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1"
thiserror = { version = "1.0.37" }
cw-multi-test = "0.20.0"
