[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
description = "SEI Smart Contract"
version = "0.1.0"
authors = ["Warp", "Warp"]
edition = "2021"
homepage = "https://example.com/"
documentation = "https://example.com/docs"
license = "MIT"
repository = ""
rust-version = "1.60.0"

[workspace.dependencies]
cosmwasm-schema = { version = "2.0.8" }
cosmwasm-std = { version = "2.0.8", features = ["stargate"] }
cosmwasm-storage = "1.4.10"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
cw-ownable = "2.0.0"
cw721 = "0.18"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1"
thiserror = { version = "2.0" }
cw-multi-test = "2"
